refactor: use List.of for better readability