@@ -13,7 +13,7 @@ import uk.gov.hmcts.reform.pcs.ccd.domain.StatementOfTruthDetails;
 import uk.gov.hmcts.reform.pcs.ccd.domain.StatementOfTruthLegalRepDetails;
 import uk.gov.hmcts.reform.pcs.ccd.model.StatementOfTruth;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.when;
@@ -67,7 +67,7 @@ class StatementOfTruthServiceTest {
         when(statementOfTruthDetails.getCompletedBy()).thenReturn(StatementOfTruthCompletedBy.CLAIMANT);
         when(statementOfTruthDetails.getClaimantDetails()).thenReturn(claimantDetails);
         when(claimantDetails.getAgreementClaimant())
-            .thenReturn(Arrays.asList(StatementOfTruthAgreementClaimant.BELIEVE_TRUE));
+            .thenReturn(List.of(StatementOfTruthAgreementClaimant.BELIEVE_TRUE));
         when(claimantDetails.getFullNameClaimant()).thenReturn("John Smith");
         when(claimantDetails.getPositionClaimant()).thenReturn("Director");
 
@@ -95,7 +95,7 @@ class StatementOfTruthServiceTest {
             .thenReturn(StatementOfTruthCompletedBy.LEGAL_REPRESENTATIVE);
         when(statementOfTruthDetails.getLegalRepDetails()).thenReturn(legalRepDetails);
         when(legalRepDetails.getAgreementLegalRep())
-            .thenReturn(Arrays.asList(StatementOfTruthAgreementLegalRep.AGREED));
+            .thenReturn(List.of(StatementOfTruthAgreementLegalRep.AGREED));
         when(legalRepDetails.getFullNameLegalRep()).thenReturn("Jane Doe");
         when(legalRepDetails.getFirmNameLegalRep()).thenReturn("Smith & Co Solicitors");
         when(legalRepDetails.getPositionLegalRep()).thenReturn("Partner");
